# slicevis

./: .gitattributes  .gitignore  LICENSE  README.md  setup.cfg
ctwidgets/: __init__.py  image.py  learn.py  load.py  plot.py  stats.py  throttle.py  widget.py
docs/Report/: implementation.tex  intro.tex  main.tex  references.bib  structure.tex  use_cases.tex
examples/: CT140_organs.segff  CT280_organs.segff  LICENSE.txt  Organs.segff  cylinder.gff  demo.ipynb  ellipsoid.gff  presentation.ipynb  test.ipynb  tutorial.ipynb  tutorial_2.ipynb
slicevis/: __init__.py  image.py  load.py  utilities.py  widget.py
