[metadata]
name = ctwidgets
version = 0.0.2
author = Nicholas Book
author_email = nicholas.book@rwth-aachen.de
description = A package for interactive CT image visualization
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
zip_safe = False
include_package_data = True
packages = ctwidgets
install_requires =
    numpy
    gffio
    nibabel
    matplotlib
    plotly
    nbformat>=4.2.0