[metadata]
name = slicevis
version = 1.0.0
author = Nicholas Book
author_email = nicholas.book@rwth-aachen.de
url = https://git.rwth-aachen.de/nicholasbook/sce-project-ss22
description = A package for interactive slice visualization.
long_description = file: README.md
license = MIT 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.8
zip_safe = False
include_package_data = True
packages = slicevis
install_requires =
    numpy
    gffio @ https://test-files.pythonhosted.org/packages/fd/ee/a0e75fff186b32c680325bd5a569ec248b6771b59624ecfcd36d329154fc/gffio-0.0.2-py3-none-any.whl#sha256=0afcd61a090ff10143f808599554a680c0a78ff3fef96662cb07ce8e4540c75c
    nibabel
    matplotlib
    plotly
    ipywidgets
    nbformat>=4.2.0
    wheel
    pandas