[metadata]
name = slicevis
version = 1.0.0
author = Nicholas Book
author_email = nicholas.book@rwth-aachen.de
url = https://git.rwth-aachen.de/nicholasbook/sce-project-ss22
description = A package for interactive slice visualization.
long_description = file: README.md
license = MIT 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.8
zip_safe = False
include_package_data = True
packages = slicevis
install_requires =
    numpy
    pygff
    nibabel
    matplotlib
    plotly
    ipywidgets
    nbformat>=4.2.0
    wheel
    pandas